Implemented Services and UI for Java version of the project. Added efficient implementations and 3 methods in SQLRepositoryResult. Problem at handling threads leak memory.