@@ -1,6 +1,5 @@
 plugins {
-    id 'java'
-    id 'application'
+    id 'java-library'
 }
 
 group = 'org.example'
@@ -14,25 +13,22 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation 'jakarta.persistence:jakarta.persistence-api:3.2.0'
-    implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
-    implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
+    api 'org.apache.logging.log4j:log4j-api:2.23.1'
+    api 'org.apache.logging.log4j:log4j-core:2.23.1'
     implementation 'org.xerial:sqlite-jdbc:3.42.0.0'
+    implementation 'org.springframework.security:spring-security-crypto:6.1.2'
+    implementation 'commons-logging:commons-logging:1.2'
+}
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
 }
-application{
-    mainClass='org.example.Main'
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += ['--add-reads', 'ProiectJava=ALL-UNNAMED']
 }
-jar{
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-    manifest{
-        attributes('Main-Class':application.mainClass)
-    }
-    from{
-        configurations.runtimeClasspath.collect{
-            it.isDirectory() ? it:zipTree(it)
-        }
-    }
-}
+
 test {
     useJUnitPlatform()
 }
